--- a/package.json
+++ b/package.json
@@ -11,27 +11,24 @@
     "prebuild": "bun run type-check"
   },
   "dependencies": {
+    "@cosmicjs/sdk": "^1.5.5",
+    "@mux/mux-node": "^8.9.0",
+    "lucide-react": "^0.263.1",
     "next": "15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@cosmicjs/sdk": "^1.5.5",
-    "jsonwebtoken": "^9.0.2",
-    "ws": "^8.18.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.446.0",
-    "date-fns": "^3.6.0"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/ws": "^8.5.10",
-    "typescript": "^5.0.0",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.5.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/ws": "^8.5.12",
+    "autoprefixer": "^10.4.15",
+    "eslint": "8.57.1",
     "eslint-config-next": "15.1.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
