--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mystream-platform",
-  "version": "1.0.0",
+  "name": "mystream-personal-live-streaming-platform",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,24 +11,25 @@
     "prebuild": "bun run type-check"
   },
   "dependencies": {
-    "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.9.0",
-    "lucide-react": "^0.263.1",
     "next": "15.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@cosmicjs/sdk": "^1.5.5",
+    "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player-react": "^2.9.0",
+    "lucide-react": "^0.460.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20.5.2",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
+    "typescript": "^5.6.0",
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/ws": "^8.5.12",
-    "autoprefixer": "^10.4.15",
-    "eslint": "8.57.1",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "15.1.0"
   }
 }
