Fix TypeScript deployment errors - add missing exports, fix types, and add date-fns dependency

--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "prebuild": "bun run type-check"
   },
   "dependencies": {
-    "next": "15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.8.0",
-    "@mux/mux-player-react": "^2.9.0",
+    "@mux/mux-node": "^8.10.0",
+    "@mux/mux-player-react": "^2.10.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.460.0",
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.0",
-    "@types/node": "^22.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/ws": "^8.5.12",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "15.1.0"
+    "eslint": "^8",
+    "eslint-config-next": "15.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
