Fix deployment error by correcting @mux/mux-node version to existing release

--- a/package.json
+++ b/package.json
@@ -12,20 +12,29 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.10.0",
-    "@mux/mux-player-react": "^2.10.0",
-    "date-fns": "^3.6.0",
-    "lucide-react": "^0.460.0",
+    "@mux/mux-node": "^8.9.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
     "next": "15.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "ws": "^8.18.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/ws": "^8.5.12",
+    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
