--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "prebuild": "bun run type-check"
   },
   "dependencies": {
-    "next": "^15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "@cosmicjs/sdk": "^1.5.5",
-    "lucide-react": "^0.468.0",
-    "ws": "^8.18.0"
+    "@mux/mux-node": "^8.0.0",
+    "@mux/mux-player-react": "^2.5.0",
+    "date-fns": "^3.0.0",
+    "lucide-react": "^0.263.1",
+    "next": "15.5.0",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@types/ws": "^8.5.13",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "^15.1.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.5.0",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33"
+    "typescript": "^5"
   }
 }
