--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.0.0",
-    "@mux/mux-player-react": "^2.5.0",
-    "date-fns": "^3.0.0",
+    "@mux/mux-node": "^8.9.0",
+    "@mux/mux-player-react": "^2.9.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.263.1",
     "next": "15.5.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "15.5.0",
     "postcss": "^8",
