--- a/package.json
+++ b/package.json
@@ -12,24 +12,22 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.9.0",
-    "@mux/mux-player-react": "^2.9.0",
-    "date-fns": "^3.6.0",
-    "lucide-react": "^0.263.1",
-    "next": "15.5.0",
+    "lucide-react": "^0.460.0",
+    "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/ws": "^8.5.10",
-    "eslint": "^8",
-    "eslint-config-next": "15.5.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "22.10.1",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
+    "@types/ws": "^8.5.13",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.7.2"
   }
 }
