--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "lucide-react": "^0.460.0",
+    "@mux/mux-node": "^8.7.0",
+    "@mux/mux-player-react": "^2.8.0",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.263.1",
     "next": "15.1.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "22.10.1",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
-    "@types/ws": "^8.5.13",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/ws": "^8.5.12",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8.0.0",
     "eslint-config-next": "15.1.3",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "5.7.2"
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   }
 }
