--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.7.0",
-    "@mux/mux-player-react": "^2.8.0",
-    "date-fns": "^3.6.0",
+    "@mux/mux-node": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
     "next": "15.1.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "ws": "^8.18.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/ws": "^8.5.12",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8.0.0",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "@types/ws": "^8.5.8",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.57.0",
     "eslint-config-next": "15.1.3",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
