--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mystream-personal-live-streaming-platform",
+  "name": "mystream-personal-streaming",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,23 +12,24 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.9.0",
+    "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player": "^2.9.0",
     "lucide-react": "^0.263.1",
     "next": "15.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "@types/ws": "^8.5.12",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@types/ws": "^8.5.13",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
