--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.8.0",
-    "@mux/mux-player": "^2.9.0",
-    "lucide-react": "^0.263.1",
-    "next": "15.1.3",
+    "@mux/mux-node": "^8.9.0",
+    "lucide-react": "^0.400.0",
+    "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "ws": "^8.18.0"
@@ -25,11 +24,10 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/ws": "^8.5.13",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.3",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.4",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.5.7",
     "typescript": "^5.7.2"
   }
 }
