--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mystream-personal-streaming",
+  "name": "mystream-personal-live-streaming-platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,22 +12,23 @@
   },
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
-    "@mux/mux-node": "^8.9.0",
-    "lucide-react": "^0.400.0",
-    "next": "^15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@mux/mux-node": "^8.8.0",
+    "next": "^15.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.460.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
     "@types/ws": "^8.5.13",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "^15.1.4",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.5.7",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
 }
