--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@cosmicjs/sdk": "^1.5.5",
     "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player-react": "^2.9.0",
     "next": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
